RESOLVED FIXED295075
Fix potential thread safety issue in `NetworkProcessProxy::sendCreationParametersToNewProcess`
https://bugs.webkit.org/show_bug.cgi?id=295075
Summary Fix potential thread safety issue in `NetworkProcessProxy::sendCreationParame...
Charlie Wolfe
Reported 2025-06-26 16:45:48 PDT
I noticed this while investigating rdar://154344286. If sendCreationParametersToNewProcess is not called on the main thread and we use callOnMainRunLoopAndWait to ensure it is, then we need to return afterward.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-26 16:46:34 PDT
Charlie Wolfe
Comment 2 2025-06-26 16:47:15 PDT
EWS
Comment 3 2025-06-27 00:57:57 PDT
Committed 296711@main (033a23407011): <https://commits.webkit.org/296711@main> Reviewed commits have been landed. Closing PR #47269 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.