Fix potential thread safety issue in `NetworkProcessProxy::sendCreationParametersToNewProcess` https://bugs.webkit.org/show_bug.cgi?id=295075 rdar://154440502

Reviewed by Chris Dumez.

I noticed this while investigating rdar://154344286. If sendCreationParametersToNewProcess is not called
on the main thread and we use callOnMainRunLoopAndWait to ensure it is, then we need to return afterward.

* Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::sendCreationParametersToNewProcess):

Canonical link: https://commits.webkit.org/296711@main